Add update new prompt

--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "jspdf": "^2.5.1",
     "micro": "latest",
     "micro-cors": "latest",
-    "next": "latest",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
